--- a/config.json
+++ b/config.json
@@ -16,10 +16,11 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Your-Father",
-    "PREFIX": "/",
+    "BOTNAME": "Bot",
+    "PREFIX": "+",
     "ADMINBOT": [
-        "100037743553265"
+        "61566442353917"
+        "61565406584020"
     ],
     "NDH": [
         "100037743553265"
