--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,128 @@
-
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261565406584020%22%3A%22Y8YgWQXh%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "datr",
+        "value": "99hJZ5gXf6LEYu1OnZknk6RD",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "sb",
+        "value": "99hJZ3I23_mnSm0kgCQeNPz9",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B772x384x1.875",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "dpr",
+        "value": "2.061462879180908",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2682%3Btimestamp%3A1733156495",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "wd",
+        "value": "891x1792",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61566442353917",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "xs",
+        "value": "17%3AXa2yMNOEdgt-lQ%3A2%3A1733303172%3A-1%3A9817",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "fr",
+        "value": "14Ux0tdsZtuyaXjSV.AWULmSjeSRW4J_ENfXRVY_q7vP4.BnT8b6..AAA.0.0.BnUCjq.AWWRWa7NwXg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1733306609114%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-04T10:03:33.001Z",
+        "lastAccessed": "2024-12-04T10:03:33.001Z"
+    }
+]
