--- a/appstate.json
+++ b/appstate.json
@@ -1,128 +1,158 @@
 [
     {
-        "key": "dbln",
-        "value": "%7B%2261565406584020%22%3A%22Y8YgWQXh%22%7D",
-        "domain": "facebook.com",
-        "path": "/login/device-based/",
+        "domain": ".facebook.com",
+        "expirationDate": 1767534473.953019,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": true,
+        "name": "ps_l",
+        "path": "/",
+        "sameSite": "lax",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "1"
     },
     {
-        "key": "datr",
-        "value": "99hJZ5gXf6LEYu1OnZknk6RD",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1767792044.166884,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": true,
+        "name": "datr",
+        "path": "/",
+        "sameSite": "no_restriction",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "99hJZ5gXf6LEYu1OnZknk6RD"
     },
     {
-        "key": "sb",
-        "value": "99hJZ3I23_mnSm0kgCQeNPz9",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1741082601.53082,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": true,
+        "name": "fr",
+        "path": "/",
+        "sameSite": "no_restriction",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "14Ux0tdsZtuyaXjSV.AWULmSjeSRW4J_ENfXRVY_q7vP4.BnT8b6..AAA.0.0.BnUCjq.AWWRWa7NwXg"
     },
     {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1738340497,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": false,
+        "name": "vpd",
+        "path": "/",
+        "sameSite": "lax",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "v1%3B772x384x1.875"
     },
     {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1764839174.074313,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": true,
+        "name": "xs",
+        "path": "/",
+        "sameSite": "no_restriction",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "17%3AXa2yMNOEdgt-lQ%3A2%3A1733303172%3A-1%3A9817"
     },
     {
-        "key": "vpd",
-        "value": "v1%3B772x384x1.875",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1733842202.989362,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": false,
+        "name": "locale",
+        "path": "/",
+        "sameSite": "no_restriction",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "en_GB"
     },
     {
-        "key": "dpr",
-        "value": "2.061462879180908",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1764839174.072892,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": false,
+        "name": "c_user",
+        "path": "/",
+        "sameSite": "no_restriction",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "61566442353917"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2682%3Btimestamp%3A1733156495",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1733912271,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": false,
+        "name": "dpr",
+        "path": "/",
+        "sameSite": "no_restriction",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "2.061462879180908"
     },
     {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1767534473.95373,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": true,
+        "name": "ps_n",
+        "path": "/",
+        "sameSite": "no_restriction",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "1"
     },
     {
-        "key": "wd",
-        "value": "891x1792",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1767863174.074214,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": true,
+        "name": "sb",
+        "path": "/",
+        "sameSite": "no_restriction",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "99hJZ3I23_mnSm0kgCQeNPz9"
     },
     {
-        "key": "c_user",
-        "value": "61566442353917",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1733912271,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "httpOnly": false,
+        "name": "wd",
+        "path": "/",
+        "sameSite": "lax",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "891x1792"
     },
     {
-        "key": "xs",
-        "value": "17%3AXa2yMNOEdgt-lQ%3A2%3A1733303172%3A-1%3A9817",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
+        "expirationDate": 1740932497,
         "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
-    },
-    {
-        "key": "fr",
-        "value": "14Ux0tdsZtuyaXjSV.AWULmSjeSRW4J_ENfXRVY_q7vP4.BnT8b6..AAA.0.0.BnUCjq.AWWRWa7NwXg",
-        "domain": "facebook.com",
+        "httpOnly": false,
+        "name": "wl_cbv",
         "path": "/",
-        "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1733306609114%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-12-04T10:03:33.001Z",
-        "lastAccessed": "2024-12-04T10:03:33.001Z"
+        "sameSite": "no_restriction",
+        "secure": true,
+        "session": false,
+        "storeId": null,
+        "value": "v2%3Bclient_version%3A2682%3Btimestamp%3A1733156495"
     }
 ]
